--- a/plagozny.pl/css/fontello.css
+++ b/plagozny.pl/css/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?26331601');
-  src: url('../font/fontello.eot?26331601#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?26331601') format('woff2'),
-       url('../font/fontello.woff?26331601') format('woff'),
-       url('../font/fontello.ttf?26331601') format('truetype'),
-       url('../font/fontello.svg?26331601#fontello') format('svg');
+  src: url('../font/fontello.eot?60030749');
+  src: url('../font/fontello.eot?60030749#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?60030749') format('woff2'),
+       url('../font/fontello.woff?60030749') format('woff'),
+       url('../font/fontello.ttf?60030749') format('truetype'),
+       url('../font/fontello.svg?60030749#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?26331601#fontello') format('svg');
+    src: url('../font/fontello.svg?60030749#fontello') format('svg');
   }
 }
 */
@@ -54,11 +54,12 @@
   /* Uncomment for 3D effect */
   /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
 }
- 
-.icon-clipboard:before { content: '\e800'; font-size: 76px;} /* '' */
-.icon-mail:before { content: '\e801'; } /* '' */
-.icon-user:before { content: '\e802'; font-size: 76px; } /* '' */
+
+.icon-videocam:before { content: '\e800';  font-size: 76px;} /* '' */
+.icon-user:before { content: '\e801';  font-size: 76px;} /* '' */
+.icon-clipboard:before { content: '\e802';  font-size: 76px;} /* '' */
+.icon-mail:before { content: '\e803'; } /* '' */
 .icon-mail-alt:before { content: '\f0e0'; font-size: 76px; } /* '' */
-.icon-graduation-cap:before { content: '\f19d'; font-size: 76px; } /* '' */
-.icon-soccer-ball:before { content: '\f1e3'; font-size: 76px;} /* '' */
-.icon-facebook-squared:before { content: '\f30e'; } /* '' */
+.icon-graduation-cap:before { content: '\f19d';  font-size: 76px;} /* '' */
+.icon-soccer-ball:before { content: '\f1e3';  font-size: 76px;} /* '' */
+.icon-facebook-squared:before { content: '\f308'; } /* '' */
