--- a/plagozny.pl/dev/scss/style.scss
+++ b/plagozny.pl/dev/scss/style.scss
@@ -20,6 +20,9 @@ h2 {
 	color: $primary;
 }
 
+.paddingBottom {
+	padding-bottom: 100px !important;
+}
 
 .sliderStyle {
 	button {
@@ -51,7 +54,13 @@ nav {
 .navIcon {
 	margin-top: -12px;
 	color: #ef5350;	
-	
+	padding-left:10px;
+}
+
+.buttonIcon{
+	color: #fff !important;
+	font-size: 18px !important;
+	padding-left: 16px;
 }
 
 .myLogo {
