spanish language added, navbar work language changed to icon

--- a/plagozny.pl/dev/scss/style.scss
+++ b/plagozny.pl/dev/scss/style.scss
@@ -52,6 +52,12 @@ nav {
 	padding-left:10px;
 }
 
+.switchLnagButton{
+	height: 25px;
+	margin-top: 5px;
+}
+
+
 .buttonIcon{
 	color: #fff !important;
 	font-size: 18px !important;
